# sim2real_drone_racing

./: README.md  dependencies.yaml  python_dependencies.txt
drone_racing/drone_racing/: CMakeLists.txt  package.xml
drone_racing/drone_racing/include/drone_racing/: data_saver.h  drone_racing.h  gate_replacer.h  gazebo_rviz_visualizer.h  global_trajectory.h  minimum_jerk_trajectory.h  trajectory_base.h  trajectory_manager.h  visualizer.h
drone_racing/drone_racing/launch/: simulation.launch  simulation_no_quad_gui.launch
drone_racing/drone_racing/launch/utils/: base_quad_simulation_no_gui.launch  edit_world.launch
drone_racing/drone_racing/parameters/: goals.yaml  main.yaml
drone_racing/drone_racing/resources/global_trajectories/: global_trajectory.txt
drone_racing/drone_racing/resources/rviz/: race_track.rviz
drone_racing/drone_racing/resources/scripts/: collect_data.py
drone_racing/drone_racing/resources/simulation/urdf/: hummingbird_base.xacro  mav_generic_odometry_sensor.gazebo
drone_racing/drone_racing/resources/simulation/vehicles/: camera.stl  hummingbird_rgbcamera300200.gazebo
drone_racing/drone_racing/resources/worlds/: race_track.world
drone_racing/drone_racing/src/: data_saver.cpp  drone_racing.cpp  drone_racing_node.cpp  gate_replacer.cpp  gazebo_rviz_visualizer.cpp  global_trajectory.cpp  minimum_jerk_trajectory.cpp  trajectory_base.cpp  trajectory_manager.cpp  visualizer.cpp
drone_racing/rapid_trajectories/: CMakeLists.txt  package.xml
drone_racing/rapid_trajectories/include/rapid_trajectories/: RapidTrajectoryGenerator.h
drone_racing/rapid_trajectories/src/: Demo.cpp  RapidTrajectoryGenerator.cpp  SingleAxisTrajectory.cpp
learning/deep_drone_racing_learner/: CMakeLists.txt  package.xml  setup.py
learning/deep_drone_racing_learner/src/ddr_learner/: common_flags.py  test.py  train.py  train_model.sh  utils.py
learning/deep_drone_racing_learner/src/ddr_learner/models/: base_learner.py  data_utils.py  nets.py
learning/deep_drone_racing_learner/src/ddr_learner/results/best_model/: navigation_model.data-00000-of-00001  navigation_model.index
learning/deep_drone_racing_learning_node/: CMakeLists.txt  package.xml  setup.py
learning/deep_drone_racing_learning_node/launch/: net_controller_launch.launch
learning/deep_drone_racing_learning_node/nodes/: deep_drone_racing_node.py
learning/deep_drone_racing_learning_node/src/Network/: Network.py
test_racing/: CMakeLists.txt  package.xml  setup.py
test_racing/launch/: test_racing.launch
test_racing/nodes/: test_racing.py
test_racing/src/TestRacing/: TestRacing.py
