<?xml version="1.0"?>
<package format ="2">
  <name>rapid_trajectories</name>
  <version>0.0.0</version>
  <description>The rapid_trajectories package</description>

  <maintainer email="falanga@ifi.uzh.ch">Davide Falanga</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>quad_common</depend>
  <depend>eigen_catkin</depend>
  <depend>visualization_msgs</depend>
  <depend>mav_msgs</depend>
</package>
