<?xml version="1.0"?>
<package format="2">
  <name>deep_drone_racing_learner</name>
  <version>0.0.1</version>
  <description>Tensorflow learner model</description>

  <maintainer email="loquercio@ifi.uzh.ch">tony</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
    
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
  <export>

  </export>
</package>
